# afterburner

./: .gitignore  README.md  pyproject.toml
config/: settings.toml
docs/: agendador-tarefas-windows.md  git-comandos-basicos.md  pyautogui-guia-basico.md
elements/: README.md
src/afterburner/: __init__.py  config.py  logger.py  main.py
src/afterburner/tasks/: activateAB.py  closeAB.py  openAB.py
src/afterburner/utils/: elements.py
